Archive2/b3/a79abeefca26a5/output
+ clang++ -std=c++11 -Wall -Wextra -pthread main.cpp
main.cpp:5:7: error: comparison between pointer and integer ('int *' and 'int')
    p == b;
    ~ ^  ~
main.cpp:6:7: error: comparison between pointer and integer ('int *' and 'int')
    p != b;
    ~ ^  ~
main.cpp:7:8: error: comparison between pointer and integer ('void *' and 'int')
    vp == b;
    ~~ ^  ~
main.cpp:8:8: error: comparison between pointer and integer ('void *' and 'int')
    vp != b;
    ~~ ^  ~
4 errors generated.
