Archive2/b3/a79abeefca26a5/main.cpp
int main() {
    int* p = nullptr;
    void* vp = nullptr;
    bool b = false;
    p == b;
    p != b;
    vp == b;
    vp != b;
}
